# signal-websocket-bridge

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .vulture-whitelist.py  CLIENT_EXAMPLES.md  Dockerfile  METHODS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  signal-cli.service  signal-websocket-bridge.service
.github/workflows/: build-docker-patched-signal-cli.yml  check-upstream-signal-cli.yml  check.yml  integration-test.yml  release-docker.yml  release.yml
docker/: signal-cli-dbus.conf  supervisord.conf
src/swb/: __init__.py  __main__.py  asyncapi.py  config.py  dbus_client.py  dispatch.py  signals.py  types.py  websocket_server.py
tests/integration/: test_signal_cli_integration.py
tests/unit/: __init__.py  conftest.py  dbus_mock.py  test_asyncapi.py  test_config.py  test_dbus_client.py  test_dispatch.py  test_signals.py  test_types.py  test_websocket_server.py
